fixed small images in small collection. now 5 images across on mobile.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5094,19 +5094,20 @@ that IE7/8 do not support :nth-child.
 /* line 48, ../../sass/_custom.scss */
 #images .column {
   padding: 0 8px;
+  width: 100%;
 }
 
-/* line 52, ../../sass/_custom.scss */
+/* line 53, ../../sass/_custom.scss */
 #loading, #images {
   padding-top: 3.214em;
 }
 
-/* line 58, ../../sass/_custom.scss */
+/* line 59, ../../sass/_custom.scss */
 .block-grid.one-up li, .block-grid .two-up li, .block-grid.three-up li, .block-grid.four-up li, .block-grid.five-up li, .block-grid.six-up li, .block-grid.seven-up li, .block-grid.eight-up li, .block-grid.nine-up li, .block-grid.ten-up li, .block-grid.eleven-up li, .block-grid.twelve-up li {
   padding: 0;
 }
 
-/* line 61, ../../sass/_custom.scss */
+/* line 62, ../../sass/_custom.scss */
 .block-grid img {
   display: block;
   width: 200px;
@@ -5114,7 +5115,7 @@ that IE7/8 do not support :nth-child.
 }
 
 @media only screen and (-moz-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
-  /* line 70, ../../sass/_custom.scss */
+  /* line 71, ../../sass/_custom.scss */
   #loading img {
     height: 64px;
     width: 64px;
