--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -47,6 +47,7 @@ $img_padding: 0px;
 
 #images .column {
     padding: 0 8px;
+    width: 100%;
 }
 
 #loading, #images {
